Responsive have to fix spacing

--- a/minerva-frontend/src/app/components/image-carousel/styles.css
+++ b/minerva-frontend/src/app/components/image-carousel/styles.css
@@ -20,24 +20,18 @@
   color: white; /* Change arrow color */
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);  
   padding: 0;
-  background-color: #800080;
   padding: 35px;
   border-radius: 50px;
+  opacity: 90%;
+  font-weight: bolder;
 }
 
-/* Position the navigation arrows beside the centered image */
 .swiper-button-prev {
-  left: 15%; /* Position to the left */
-  transform: translateY(-30%);
+  left: -4%; 
+  transform: translateY(-20%);
 }
 
 .swiper-button-next {
-  right: 15%; /* Position to the right */
-  transform: translateY(-30%);
-}
-
-@media (max-width: 1200px) {
-  .swiper-button-next,.swiper-button-prev{
-    display: none;
-  }
+  right: -4%;
+  transform: translateY(-20%);
 }
